# cpp_homeworks

BIGINTOPTIMIZED/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
BIGINTOPTIMIZED/vector/: vector.h
bind/: bind.h  bind_unit_tests.cpp  main.cpp
debug_list/: CMakeLists.txt  debug_list.h  main.cpp
debug_set/: CMakeLists.txt  debug_set.h  main.cpp
huffman_encoder/: CMakeLists.txt  dst.huf  test.sh
huffman_encoder/lib/: CMakeLists.txt  decoder.cpp  encoder.cpp  huffman_tree.cpp  summator.cpp  word.cpp
huffman_encoder/lib/headers/: code.h  consts.h  decoder.h  encoder.h  huffman_tree.h  summator.h  word.h
huffman_encoder/utility/: CMakeLists.txt  compressor.cpp  decompressor.cpp  file_reader.cpp  file_writer.cpp  main.cpp
huffman_encoder/utility/headers/: compressor.h  decompressor.h  file_reader.h  file_writer.h
persistent-set/: CMakeLists.txt  main.cpp  my_linked_ptr.h  my_shared_ptr.h  persistent_set.h
